# my-mcp-server

./: main.py  pyproject.toml  requirements.txt
.github/: quality-metrics.yml  rotate-api-keys.yml
.github/workflows/: deploy.yml
scripts/: check_secret_access.py  deployment_monitor.py  dev.sh  generate_docs.py
src/: debug_server.py
src/utils/: debug_decorators.py  error_tracker.py  logging_config.py  profiler.py
tests/: cascade_tests.py  e2e_tests.py  integration_tests.py  unit_tests.py
