[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "aiohttp>=3.13.3",
    "mcp[all,cli,server]>=1.25.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[tool.coverage.run]
souece = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_coverd = false
exlude_lines = [
    "pragma: no_cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

